src/views/_screen.scss
/*
 *
 * Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW)
 * wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html
 *
 */
/*
  @title: All screen views
 */

%no-breadcrumb-icon {
	content: none;
	padding: 0;
}

%banner-text-color {
	color: #fff;
}

%fip-height {
	height: 1.4em;
}

%all-view-navigation-links {
	@include navigation-links;
}

.wb-sl {
	background: #000;
	color: #fff;
}

#gcwu-sig {
	@extend %fip-height;
	margin: 10px 0;
}

#wmms {
	@extend %fip-height;
}

#wb-sttl {
	@extend %all-view-navigation-links;

	a {
		@extend %banner-text-color;
	}
}

#wb-bnr-ss {
	background: #618000;
}

#wb-ss {
	@extend %all-view-navigation-links;
	padding: 0.2em 0;

	a {
		@extend %banner-text-color;
		font-size: 120%;
	}
}

#wb-bc {
	.breadcrumb {
		background: transparent;
		margin-bottom: 0;
	}

	li {
		&:before,
		&:after {
			color: #333;
			font-family: "Glyphicons Halflings";
			font-size: 0.7em;
		}

		&:before {
			content: "\e092";
		}

		&:first-child {
			&:before {
				@extend %no-breadcrumb-icon;
			}
		}
	}
}

#wb-dtmd {
	float: right;
}

#wb-info {
	li {
		margin-bottom: 0.75em;
	}
}

[dir=rtl] {
	#wb-bc {
		li {
			&:before {
				@extend %no-breadcrumb-icon;
			}

			&:after {
				content: "\e091";
				padding: 0 5px;
			}

			&:first-child {
				&:after {
					@extend %no-breadcrumb-icon;
				}
			}
		}
	}

	#wb-dtmd {
		float: left;
	}
}

